# VLaDOS

./: Cargo.toml  README.md
.github/workflows/: quickstart.yml
src/: cmdline.rs  error.rs  main.rs  scanner.rs  utils.rs
src/ast/: expr.rs
src/lexer/: token.rs
src/lexer/token/: token_type.rs
tests/: basic_arithmetic.sv
